--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.6.12
   provider: ^6.1.2
+  crypto: ^3.0.7
 
 dev_dependencies:
   flutter_test:
